[package]
name = "pygamer-quickstart"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"
repository = "https://github.com/jacobrosenthal/pygamer-quickstart"
keywords = ["pygamer"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pygamer = "~0.5"
pygamer-panic-led = "0.1.0"

[features]
# ask the HAL to enable extra features
default = ["pygamer/sd-card", "pygamer/usb"]
use_rtt = []

# setting dev to same as release until theres a way to have
# vscode run use release mode. Almost nobody has a debugger
# hooked up anyway, but if you'll need to change this
[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3 # neopixel prefers 3 over s
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3 # neopixel prefers 3 over s
overflow-checks = false
